kustomize/overlays/scots-lab/apps/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
# CI trigger
metadata:
  name: vaultwarden-route
  namespace: vaultwarden
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - "vaultwarden.scots-lab.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vaultwarden
      port: 80
